--- a/examples/PoC/app/src/main/res/layout/activity_main.xml
+++ b/examples/PoC/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,9 @@
         android:orientation="vertical"
         tools:context="com.sletmo.launcherclientpoc.MainActivity">
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-    </android.support.v4.view.ViewPager>
-
-
-
+    </androidx.viewpager.widget.ViewPager>
 </LinearLayout>
